--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -1,23 +1,45 @@
-html
+/* html
 {
     width: 100%;
     height: 100%;
     background-image:linear-gradient(#9391FF, #FBF0FF);
-}
+} */
 
-header{
+.head{
     border-style: solid;
     border-color: black;
-    background-color: #FBF0FF;
-    position: fixed;
     right: 50%;
     left: 50%;
+    text-align: center;
 }
 
 .timer{
     width: 10%;
-    border: dotted;
+    border: solid;
     border-color: black;
     float: right;
     color: red;
+}
+
+.main{
+    border-style: solid;
+    border-color: black;
+}
+
+.question{
+    border-style: solid;
+    border-color: black;
+    width: 45%;
+    float: left;
+}
+
+.answers{
+    border-style: solid;
+    border-color: black;
+    width: 45%;
+    float: right;
+}
+
+footer{
+    text-align: center;
 }
