--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -6,6 +6,7 @@
 } */
 
 .head{
+    padding-top: 50x;
     border-style: solid;
     border-color: black;
     right: 50%;
@@ -22,8 +23,15 @@
 }
 
 .main{
+    width: 100%;
+    height: 730px;
     border-style: solid;
     border-color: black;
+    flex:auto;
+    display: flex;
+    flex: 1 0 900px; 
+    flex-direction: row;
+    flex-wrap: wrap;   
 }
 
 .question{
@@ -31,6 +39,10 @@
     border-color: black;
     width: 45%;
     float: left;
+    height: 80%;
+    flex: auto;
+    display: inline-block;
+    margin: auto;
 }
 
 .answers{
@@ -38,6 +50,9 @@
     border-color: black;
     width: 45%;
     float: right;
+    height: 80%;
+    flex: auto;
+    margin: auto;
 }
 
 footer{
